--- a/style.css
+++ b/style.css
@@ -46,11 +46,55 @@ table {
   border-spacing: 0; }
 
 body {
-  width: 1200px;
-  height: 2000px;
+  background-image: url("./images/code.jpg"); }
+
+#container {
+  padding-top: 10px;
+  width: 1000px;
+  height: 100%;
   margin: 0 auto;
   background-color: #c5d3dd;
   border: 1px solid black; }
+
+#navBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 80%;
+  margin: 0 auto; }
+  #navBar a {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    padding: 10px; }
+  #navBar a:hover {
+    color: blue; }
+
+#mainTitle {
+  font-family: 'Anton', sans-serif;
+  font-size: 40px;
+  text-align: center;
+  padding: 30px; }
+
+.title {
+  font-size: 26px;
+  text-align: center;
+  padding: 18px; }
+
+.content {
+  width: 65%;
+  margin: 0 auto;
+  text-indent: 40px;
+  line-height: 1.6;
+  padding: 0 0 15px 0; }
+
+footer {
+  background-color: yellow;
+  height: 50px; }
+  footer p {
+    padding: 20px;
+    font-size: 14px;
+    text-align: center; }
 
 h1, h2 {
   font-family: 'Roboto', sans-serif; }
